<resources>
    <string name="app_name">Treino facil</string>

    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login do Usuário</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="botaoCadastrar">cadastrar</string>
    <string name="botaologin">entrar</string>
    <string name="tv_cadastre_se">Não tem conta? cadastre-se</string>


    <string name="label_new_task">Criar Treino</string>
    <string name="label_title">Título</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Treino</string>
    <string name="label_exercicio">Exercicio</string>
    <string name="label_description_new_task">Nova treino</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui nenhum treino cadastrado</string>
    <string name="tv_exercicio">Ops! Você não possui nenhum exercicio cadastrado</string>
    <string name="meus_exercicios">meus exercicios</string>
    <string name="meus_treinos">meus treinos</string>
    <string name="todos_exercicios">todos exercicios</string>
    <string name="adicione_treino">adicione um treino</string>
    <string name="gravar_exercicio">Gravar Exercício</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">descrição</string>
    <string name="date">10/01/2023 18:03</string>
    <string name="number">1</string>


</resources>